--- a/back-office/package.json
+++ b/back-office/package.json
@@ -8,8 +8,7 @@
   },
   "author": "Morlo Ngongang Mbakop",
   "license": "UNLICENSED",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -17,7 +16,7 @@
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.12.1",
     "gulp": "^3.9.1",
-    "webpack": "^3.9.1",
-    "yarn": "^1.3.2"
+    "json-server": "^0.12.1",
+    "webpack": "^3.9.1"
   }
 }
