--- a/back-office/package.json
+++ b/back-office/package.json
@@ -8,15 +8,48 @@
   },
   "author": "Morlo Ngongang Mbakop",
   "license": "UNLICENSED",
-  "dependencies": {},
+  "dependencies": {
+    "angular": "^1.6.7",
+    "angular-animate": "^1.6.7",
+    "angular-aria": "^1.6.7",
+    "angular-material": "^1.1.5",
+    "angular-messages": "^1.6.7",
+    "angular-translate-once": "^1.0.3",
+    "angular-ui-router": "^0.4.3",
+    "lodash-es": "^4.17.4",
+    "normalize.css": "^7.0.0",
+    "svg-inline-loader": "^0.8.0",
+    "timed-cache": "^1.1.0",
+    "whatwg-fetch": "^2.0.3"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.3",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "eslint": "^4.12.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-angular": "^3.1.1",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-sort-class-members": "^1.2.2",
+    "file-loader": "^1.1.6",
     "gulp": "^3.9.1",
+    "html-webpack-plugin": "^2.30.1",
     "json-server": "^0.12.1",
-    "webpack": "^3.9.1"
+    "node-sass": "^4.7.2",
+    "rimraf": "^2.6.2",
+    "run-all": "^1.0.1",
+    "sass-lint": "^1.12.1",
+    "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.1",
+    "style-loader": "^0.19.1",
+    "webpack": "^3.9.1",
+    "webpack-dev-middleware": "^2.0.1",
+    "webpack-hot-middleware": "^2.21.0",
+    "webpack-md5-hash": "^0.0.6"
   }
 }
