Create app component

--- a/back-office/package.json
+++ b/back-office/package.json
@@ -12,11 +12,14 @@
     "angular": "^1.6.7",
     "angular-animate": "^1.6.7",
     "angular-aria": "^1.6.7",
+    "angular-local-storage": "^0.7.1",
     "angular-material": "^1.1.5",
     "angular-messages": "^1.6.7",
+    "angular-sanitize": "^1.6.7",
     "angular-translate-once": "^1.0.3",
     "angular-ui-router": "^0.4.3",
     "lodash-es": "^4.17.4",
+    "ng-file-upload": "^12.2.13",
     "normalize.css": "^7.0.0",
     "svg-inline-loader": "^0.8.0",
     "timed-cache": "^1.1.0",
