--- a/back-office/.eslintrc
+++ b/back-office/.eslintrc
@@ -19,6 +19,7 @@
     "angular/prefer-component": 2,
     "class-methods-use-this":  [0],
     "comma-dangle":  ["error", "always-multiline"],
+    "function-paren-newline": [0],
     "import/extensions": [0],
     "import/no-extraneous-dependencies": [0], // TODO fix later
     "import/no-unresolved": [0], // TODO fix later
