--- a/back-office/package.json
+++ b/back-office/package.json
@@ -31,6 +31,8 @@
     "babel-eslint": "^8.0.3",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "chalk": "^2.3.0",
+    "css-loader": "^0.28.9",
     "eslint": "^4.12.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-angular": "^0.5.0",
