--- a/back-office/package.json
+++ b/back-office/package.json
@@ -4,6 +4,7 @@
   "description": "AK Pharmacy & Naturopathy Center Back Office Frontend",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config webpack.dev.config.js",
     "mock-api": "cd json_server && json-server -w db.json -p 9000 -r routes.json -m middleware.js -q"
   },
   "author": "Morlo Ngongang Mbakop",
@@ -26,6 +27,7 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
+    "angular-translate": "^2.17.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.3",
@@ -45,7 +47,9 @@
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.30.1",
     "json-server": "^0.12.1",
+    "ng-annotate-loader": "^0.6.1",
     "node-sass": "^4.7.2",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "run-all": "^1.0.1",
     "sass-lint": "^1.12.1",
