--- a/back-office/package.json
+++ b/back-office/package.json
@@ -4,9 +4,8 @@
   "description": "AK Pharmacy & Naturopathy Center Back Office Frontend",
   "main": "index.js",
   "scripts": {
-    "serve": "npm-run-all build sart",
-    "build": "webpack --config webpack.dev.config.js",
-    "start": "webpack-dev-server --config webpack.dev.config.js --open",
+    "build": "webpack --config webpack.dev.config.js --hide-modules",
+    "serve": "webpack-dev-server --open --config webpack.dev.config.js",
     "mock-api": "cd json_server && json-server -w db.json -p 9000 -r routes.json -m middleware.js -q"
   },
   "author": "Morlo Ngongang Mbakop",
@@ -36,6 +35,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "chalk": "^2.3.0",
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.9",
     "eslint": "^4.12.1",
     "eslint-config-airbnb-base": "^12.1.0",
@@ -51,6 +51,7 @@
     "json-server": "^0.12.1",
     "ng-annotate-loader": "^0.6.1",
     "node-sass": "^4.7.2",
+    "progress-bar-webpack-plugin": "^1.10.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "run-all": "^1.0.1",
