--- a/back-office/package.json
+++ b/back-office/package.json
@@ -4,7 +4,7 @@
   "description": "AK Pharmacy & Naturopathy Center Back Office Frontend",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.dev.config.js --hide-modules",
+    "build": "webpack --config webpack.prod.config.js",
     "serve": "webpack-dev-server --open --config webpack.dev.config.js",
     "mock-api": "cd json_server && json-server -w db.json -p 9000 -r routes.json -m middleware.js -q"
   },
@@ -59,10 +59,12 @@
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.1",
     "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.9.1",
     "webpack-dev-middleware": "^2.0.1",
     "webpack-dev-server": "^2.11.1",
     "webpack-hot-middleware": "^2.21.0",
-    "webpack-md5-hash": "^0.0.6"
+    "webpack-md5-hash": "^0.0.6",
+    "webpack-merge": "^4.1.1"
   }
 }
