--- a/back-office/package.json
+++ b/back-office/package.json
@@ -36,6 +36,7 @@
     "babel-preset-env": "^1.6.1",
     "chalk": "^2.3.0",
     "clean-webpack-plugin": "^0.1.17",
+    "copyfiles": "^1.2.0",
     "css-loader": "^0.28.9",
     "eslint": "^4.12.1",
     "eslint-config-airbnb-base": "^12.1.0",
